rust/codec-html/src/snapshots/encode_html_fragments@emphasis.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 552
expression: encoded
input_file: fixtures/fragments/html/emphasis.html
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>Some</span>
        <em itemtype="https://schema.stenci.la/Emphasis" itemscope>
          <span>emphasized</span>
        </em>
        <span>text.</span>
      </p>
    </div>
  </article>
</stencila-article>
