rust/codec-html/src/snapshots/encode_html_fragments@heading.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 552
expression: encoded
input_file: fixtures/fragments/html/heading.html
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <h2 itemtype="https://schema.stenci.la/Heading" itemscope>
        <span>Title of document</span>
      </h2>
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>The h1 tag is reserved for single use by the title. So a heading of depth 1 uses h2 etc</span>
      </p>
      <h2 itemtype="https://schema.stenci.la/Heading" itemscope>
        <span>Heading 1</span>
      </h2>
      <h3 itemtype="https://schema.stenci.la/Heading" itemscope>
        <span>Heading 2</span>
      </h3>
      <h4 itemtype="https://schema.stenci.la/Heading" itemscope>
        <span>Heading 3</span>
      </h4>
      <h5 itemtype="https://schema.stenci.la/Heading" itemscope>
        <span>Heading 4</span>
      </h5>
      <h6 itemtype="https://schema.stenci.la/Heading" itemscope>
        <span>Heading 5</span>
      </h6>
      <h2 itemtype="https://schema.stenci.la/Heading" itemscope id="heading-with-an-id">
        <span>Heading with an id</span>
      </h2>
    </div>
  </article>
</stencila-article>
