rust/codec-html/src/snapshots/encode_html_fragments@image.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 552
expression: encoded
input_file: fixtures/fragments/html/image.html
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>An image</span>
        <img itemtype="https://schema.org/ImageObject" itemscope  src="image.png"/>
        <span>.</span>
      </p>
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>An image with a title</span>
        <img itemtype="https://schema.org/ImageObject" itemscope  src="image.png"/>
        <span>.</span>
      </p>
    </div>
  </article>
</stencila-article>
