rust/codec-html/src/snapshots/encode_html_fragments@link.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 552
expression: encoded
input_file: fixtures/fragments/html/link.html
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>A</span>
        <a itemtype="https://schema.stenci.la/Link" itemscope href="https://stenci.la">
          <span>link</span>
        </a>
        <span>.</span>
      </p>
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>A</span>
        <a itemtype="https://schema.stenci.la/Link" itemscope href="">
          <span>link</span>
        </a>
        <span>with no target or title.</span>
      </p>
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>A</span>
        <a itemtype="https://schema.stenci.la/Link" itemscope href="https://stenci.la">
          <span>link</span>
        </a>
        <span>with no title.</span>
      </p>
    </div>
  </article>
</stencila-article>
