rust/codec-html/src/snapshots/encode_html_fragments@non-textual-annotation.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 442
expression: encoded
input_file: fixtures/fragments/html/non-textual-annotation.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <stencila-document-toolbar>
  </stencila-document-toolbar>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>
      <span>Nontextual annotations like</span>
      <u itemtype="http://schema.stenci.la/NontextualAnnotation" itemscope>
        <span>this</span>
      </u>
    </p>
  </div>
</article>
