rust/codec-html/src/snapshots/encode_html_fragments@paragraph.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 455
expression: encoded
input_file: fixtures/fragments/html/paragraph.html

---
<article data-root itemtype="https://schema.org/Article" itemscope>
  <stencila-document-toolbar>
  </stencila-document-toolbar>
  <div data-prop="content">
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>First paragraph.</span>
    </p>
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Second paragraph.</span>
    </p>
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Third paragraph,
split over multiple
lines.</span>
    </p>
  </div>
</article>
