rust/codec-html/src/snapshots/encode_html_fragments@strikeout.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 552
expression: encoded
input_file: fixtures/fragments/html/strikeout.html
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>Some</span>
        <del itemtype="https://schema.stenci.la/Strikeout" itemscope>
          <span>deleted</span>
        </del>
        <span>text.</span>
      </p>
    </div>
  </article>
</stencila-article>
