rust/codec-html/src/snapshots/encode_html_fragments@strong.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 455
expression: encoded
input_file: fixtures/fragments/html/strong.html

---
<article data-root itemtype="https://schema.org/Article" itemscope>
  <stencila-document-toolbar>
  </stencila-document-toolbar>
  <div data-prop="content">
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>A</span>
      <strong itemtype="https://schema.stenci.la/Strong" itemscope>
        <span>strongly</span>
      </strong>
      <span>emphasized word.</span>
    </p>
  </div>
</article>
