rust/codec-html/src/snapshots/encode_html_fragments@subscript.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 455
expression: encoded
input_file: fixtures/fragments/html/subscript.html

---
<article data-root itemtype="https://schema.org/Article" itemscope>
  <stencila-document-toolbar>
  </stencila-document-toolbar>
  <div data-prop="content">
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Subscripts like H</span>
      <sub itemtype="https://schema.stenci.la/Subscript" itemscope>
        <span>2</span>
      </sub>
      <span>0.</span>
    </p>
  </div>
</article>
